# logger

./: .eslintignore  .eslintrc.cjs  .gitignore  .npmignore  .prettierrc.json  BUILD.bazel  CREDITS  Makefile  README.md  WORKSPACE  jest-setup.cjs  jest.config.cjs  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: bazel-test.yml  codeql-analysis.yml  deploy.yml  npm-publish.yml  pr.yaml  pr.yml
__tests__/: auto.test.ts  aws-cloudwatch-transport.test.ts  aws-cloudwatch.test.ts  aws-lambda-wrapper.test.ts  aws.test.ts  child.test.ts  cli-transport.test.ts  cli.test.ts  context.test.ts  control.test.ts  data.test.ts  events.test.ts  gcp.test.ts  helpers.ts  http.test.ts  index.test.ts  platform.test.ts  prettifier.test.ts  pretty-transport.test.ts  pretty.test.ts  processors.test.ts  redact.test.ts  sentry-transport.test.ts  sentry.test.ts  tsconfig.json  types.test.ts
__tests__/__snapshots__/: auto.test.js.snap  auto.test.ts.snap  aws-cloudwatch-transport.test.js.snap  aws-cloudwatch.test.js.snap  aws-cloudwatch.test.ts.snap  aws-lambda-wrapper.test.js.snap  aws-lambda-wrapper.test.ts.snap  aws.test.js.snap  aws.test.ts.snap  child.test.js.snap  child.test.ts.snap  cli-transport.test.js.snap  cli.test.js.snap  cli.test.ts.snap  context.test.js.snap  control.test.js.snap  control.test.ts.snap  data.test.ts.snap  events.test.js.snap  events.test.ts.snap  gcp.test.js.snap  gcp.test.ts.snap  http.test.ts.snap  index.test.js.snap  index.test.ts.snap  platform.test.ts.snap  prettifier.test.js.snap  prettifier.test.ts.snap  pretty-transport.test.js.snap  pretty.test.ts.snap  processors.test.js.snap  redact.test.js.snap  redact.test.ts.snap  sentry-transport.test.js.snap  sentry.test.js.snap  sentry.test.ts.snap
lib/: cli.ts  debug.ts.ignore  express.ts  file-transport.ts  gcp.ts  index.ts  lambda.ts  logger.ts  mixins.ts  modules.d.ts  node.ts  options.ts  prettifier.ts  pretty-transport.mjs  pretty-transport.ts  sentry-transport.ts  sentry.ts  types.ts  utils.ts
lib/benchmarks/: basic.ts
lib/decorators/: caller.ts  error.ts  lambda.ts  sentry.ts
lib/listener/: sentry.ts
lib/processors/: als.ts  caller.ts  error.ts  gcp.ts  lambda.ts  redact.ts  sentry.ts
lib/transformers/: cli.ts  cloudwatch.ts  gcp.ts  json.ts
lib/transports/: aws-cloudwatch.ts  cli.ts  file.ts  sentry.ts
tools/: BUILD.bazel  bazel_deps.bzl  build_bazel_rules_nodejs.patch  jest-log-serializer.cjs  jest-reporter.cjs  jest.bzl
